-
Bug
-
Resolution: Done
-
P4: Low
-
4.7.3
-
None
-
Win 7 (32 bits)
-
89f5c035bd3798a0998c3046de643bda0fa8da6b
This bug appears in QCreator when you set (for exemple) tabSpacing field of a QToolBox. Indeed, the generated file ui_myWidget.h try to set the value but can't.
In ui_myWidget.h:
the line "toolBox->layout()->setSpacing(1);" generates this error : ui_myWidget.h:144: erreur : invalid use of incomplete type 'struct QLayout'
And if you add "#include <QtGui/QLayout>" manually, that works but if now you modify again a propertie of the widget, the file is generate again and you need to re-add the include line...