uic: #include <QLayout> for QToolBox on non-laid-out forms.

for the fake tab-spacing property, which accesses the internal
layout and sets its spacing.

Change-Id: I9d950073aa453fb3b6427e9ddb05713ef9156e5e
Task-number: QTBUG-19339
Reviewed-by: Jarek Kobus <jaroslaw.kobus@nokia.com>
Signed-off-by: Joni <joao267@gmail.com>
Reviewed-on: http://gerrit.smar.fi/311
Reviewed-by: Samu Voutilainen <smar@smar.fi>